[gd_scene load_steps=16 format=3 uid="uid://5xocwkdiplsg"]

[ext_resource type="Script" uid="uid://b6lk0qxm0basi" path="res://main/mainmenu/main_menu.gd" id="1_do530"]
[ext_resource type="Texture2D" uid="uid://cl1rdhbtfvnce" path="res://assets/Other/mainmenu.png" id="2_1ebh2"]
[ext_resource type="Texture2D" uid="uid://d2jyfvxjmgtrn" path="res://assets/Other/startbutton_normal.png" id="3_w8agk"]
[ext_resource type="Texture2D" uid="uid://dffp6ubssvpcf" path="res://assets/Other/startbutton_pressed.png" id="4_od3s3"]
[ext_resource type="Texture2D" uid="uid://caxhhf5q0cjwk" path="res://assets/Other/startbutton_hover.png" id="5_4ep60"]
[ext_resource type="Texture2D" uid="uid://g0j4u0nhlkvd" path="res://assets/Other/levelsbutton_normal.png" id="6_fwyag"]
[ext_resource type="Texture2D" uid="uid://cehm8656xuyvg" path="res://assets/Other/exitbutton_normal.png" id="6_od3s3"]
[ext_resource type="Texture2D" uid="uid://8m7nttxuxdhg" path="res://assets/Other/levelsbutton_pressed.png" id="7_62dd2"]
[ext_resource type="Texture2D" uid="uid://bkyxnjmc4ttko" path="res://assets/Other/exitbutton_pressed.png" id="7_aryhj"]
[ext_resource type="Texture2D" uid="uid://g518emikjheo" path="res://assets/Other/optionsbutton_normal.png" id="7_dfi4w"]
[ext_resource type="Texture2D" uid="uid://cw8n41jsnn5t8" path="res://assets/Other/levelsbutton_hover.png" id="8_0scl8"]
[ext_resource type="Texture2D" uid="uid://dfjj1yve7vrx7" path="res://assets/Other/optionsbutton_pressed.png" id="8_62dd2"]
[ext_resource type="Texture2D" uid="uid://c5xkaccglygfs" path="res://assets/Other/exitbutton_hover.png" id="8_xqndk"]
[ext_resource type="Texture2D" uid="uid://dellqy8k7mumr" path="res://assets/Other/optionsbutton_hover.png" id="9_0scl8"]
[ext_resource type="PackedScene" uid="uid://bfpnhahnlwv5n" path="res://main/levelpicker/level_picker.tscn" id="15_0scl8"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_do530")

[node name="MainMenuCanvas" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="MainMenuCanvas"]
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_1ebh2")

[node name="ButtonContainer" type="VBoxContainer" parent="MainMenuCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -40.0
offset_right = 44.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="TextureButton" parent="MainMenuCanvas/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_w8agk")
texture_pressed = ExtResource("4_od3s3")
texture_hover = ExtResource("5_4ep60")

[node name="LevelButton" type="TextureButton" parent="MainMenuCanvas/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_fwyag")
texture_pressed = ExtResource("7_62dd2")
texture_hover = ExtResource("8_0scl8")

[node name="OptionsButton" type="TextureButton" parent="MainMenuCanvas/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("7_dfi4w")
texture_pressed = ExtResource("8_62dd2")
texture_hover = ExtResource("9_0scl8")

[node name="ExitButton" type="TextureButton" parent="MainMenuCanvas/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_od3s3")
texture_pressed = ExtResource("7_aryhj")
texture_hover = ExtResource("8_xqndk")

[node name="LevelPicker" parent="MainMenuCanvas" instance=ExtResource("15_0scl8")]
visible = false
offset_left = 254.0
offset_top = 150.0
offset_right = 254.0
offset_bottom = 150.0

[connection signal="pressed" from="MainMenuCanvas/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenuCanvas/ButtonContainer/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="MainMenuCanvas/ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenuCanvas/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
